# reservation-api

./: .env.example  .gitignore  pyproject.toml
api/: main.py
api/core/: config.py
api/crud/: property.py  reservation.py
api/db/: database.py  models.py
api/routers/: property.py  reservation.py
api/schemas/: property.py  reservation.py
migrations/: env.py
migrations/versions/: 25026d0e7750_create_property_and_reservation_table.py  7074f9cdb924_create_reservation_status_enum.py  cbe97392ccd0_remove_unecessary_property_status_enum.py  f08dda69fbe5_add_status_column_enum_in_property_table.py
tests/: conftest.py  test_api.py  test_property.py  test_reservation.py
